fixing spacing

--- a/projectTwo.css
+++ b/projectTwo.css
@@ -6,6 +6,7 @@ body {
 }
 
 h1 {
+    margin-top: 0px;
     text-align: center;
     color: white;
     font-size: 50px;
